--- a/src/routes/imc/ImcDisplay.module.css
+++ b/src/routes/imc/ImcDisplay.module.css
@@ -1,43 +1,43 @@
 
 .severeunderweight {
 
-    color : rgba(74,121,175,255);
+    color : rgb(33, 98, 172);
 
 }
 
 .underweight {
 
-    color: rgba(71,165,175,255);
+    color: rgba(71,165,175);
     
 }
 
 .normal {
 
-    color : rgba(84,181,150,255);
+    color : rgb(51, 192, 147);
    
 }
 
 .overweight {
 
-    color: rgba(236,198,73,255);
+    color: rgba(236,198,73);
     
 }
 
 .moderateobesity {
 
-    color : rgba(237,115,102,255);
+    color : rgb(212, 115, 23);
     
 }
 
 .severeobesity {
 
-    color : rgba(223,89,77,255);
+    color : rgba(223,89,77);
     
 }
 
 .morbidobesity {
 
-    color : rgba(174,74,74,255);
+    color : rgb(153, 11, 11);
     
 }
 
