--- a/src/routes/imc/ImcDisplay.module.css
+++ b/src/routes/imc/ImcDisplay.module.css
@@ -14,7 +14,7 @@
 .normal {
 
     color : rgb(51, 192, 147);
-   
+
 }
 
 .overweight {
@@ -31,7 +31,7 @@
 
 .severeobesity {
 
-    color : rgba(223,89,77);
+    color : rgb(187, 53, 41);
     
 }
 
